fix: print all messages, enable persisting more than one